lib/crates/fabro-llm/tests/it/wire/snapshots/it__wire__openai_compatible__stream_tool_call_deltas.snap
---
source: lib/crates/fabro-llm/tests/it/wire/openai_compatible.rs
expression: rendered
---
[
  {
    "type": "tool_call_start",
    "tool_call": {
      "id": "call_abc",
      "name": "search",
      "type": "function",
      "arguments": null,
      "raw_arguments": null
    }
  },
  {
    "type": "tool_call_delta",
    "tool_call": {
      "id": "call_abc",
      "name": "search",
      "type": "function",
      "arguments": null,
      "raw_arguments": null
    }
  },
  {
    "type": "tool_call_delta",
    "tool_call": {
      "id": "call_abc",
      "name": "search",
      "type": "function",
      "arguments": null,
      "raw_arguments": null
    }
  },
  {
    "type": "tool_call_end",
    "tool_call": {
      "id": "call_abc",
      "name": "search",
      "type": "function",
      "arguments": {
        "query": "foo"
      },
      "raw_arguments": "{\"query\":\"foo\"}"
    }
  },
  {
    "type": "finish",
    "finish_reason": "tool_calls",
    "usage": {
      "input_tokens": 20,
      "output_tokens": 9,
      "reasoning_tokens": 0,
      "cache_read_tokens": 0,
      "cache_write_tokens": 0
    },
    "response": {
      "id": "chatcmpl_stream",
      "model": "test-model",
      "provider": "openai-compatible",
      "message": {
        "role": "assistant",
        "content": [
          {
            "kind": "tool_call",
            "data": {
              "id": "call_abc",
              "name": "search",
              "type": "function",
              "arguments": {
                "query": "foo"
              },
              "raw_arguments": "{\"query\":\"foo\"}"
            }
          }
        ]
      },
      "finish_reason": "tool_calls",
      "usage": {
        "input_tokens": 20,
        "output_tokens": 9,
        "reasoning_tokens": 0,
        "cache_read_tokens": 0,
        "cache_write_tokens": 0
      },
      "raw": null,
      "warnings": [],
      "rate_limit": null
    }
  }
]
